--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,13 @@ develop = .
 parts = test
 
 [test]
-recipe = zc.recipe.testrunner
-eggs = cromlech.configuration [test]
-defaults = ['--tests-pattern', '^f?tests$', '-v', '-c']
+recipe = z3c.recipe.scripts
+# Need exit status code for buildbot.
+# See https://bugs.launchpad.net/zc.buildout/+bug/164629
+initialization =
+    import sys
+    if not sys.argv[1:]:sys.argv.append('src')
+    sys.argv.append('--doctest-modules')
+eggs =
+    cromlech.configuration [test] 
+    pytest
