--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,9 +3,7 @@ develop = .
 parts = test
 
 [test]
-recipe = z3c.recipe.scripts
-# Need exit status code for buildbot.
-# See https://bugs.launchpad.net/zc.buildout/+bug/164629
+recipe = zc.recipe.egg
 initialization =
     import sys
     if not sys.argv[1:]:sys.argv.append('src')
