--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 sudo: false
 cache: pip
 python:
-  - 2.7
   - 3.4
   - 3.5
   - 3.6
@@ -14,4 +13,4 @@ install:
   - pip install -U -e .[test]
 
 script:
-  - pytest src
+  - pytest src --doctest-modules
